<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cyt.music</groupId>
  <artifactId>com.cyt.music</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>com.cyt.music</name>
  <modules>
    <module>com.cyt.music.common</module>
    <module>com.cyt.music.impl</module>
    <module>com.cyt.music.interfaces</module>
    <module>com.cyt.music.webapp</module>
  </modules>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring.framework.version>3.1.1.RELEASE</spring.framework.version>
    <mybatis.version>3.2.2</mybatis.version>
    <mybatis.spring.version>1.2.1</mybatis.spring.version>
    <servlet-api.version>2.4</servlet-api.version>
    <log4j.version>1.2.16</log4j.version>
    <ibatis.version>2.3.4.726</ibatis.version>
	<oracle.ojdbc.version>11.2.0.3.0</oracle.ojdbc.version>
	<junit.version>3.8.1</junit.version>
	<common.beanutils.version>1.8.0</common.beanutils.version>
    <aspectjrt.version>1.5.3</aspectjrt.version>
    <aspectjweaver.version>1.5.3</aspectjweaver.version>
	
	<com.cyt.music.version>0.0.1-SNAPSHOT</com.cyt.music.version>
	<com.cyt.music.schema.version>0.0.1-SNAPSHOT</com.cyt.music.schema.version>
	<com.cyt.music.common.version>0.0.1-SNAPSHOT</com.cyt.music.common.version>
	<com.cyt.music.interfaces.version>0.0.1-SNAPSHOT</com.cyt.music.interfaces.version>
	<com.cyt.music.impl.version>0.0.1-SNAPSHOT</com.cyt.music.impl.version>
	<com.cyt.music.webapp.version>0.0.1-SNAPSHOT</com.cyt.music.webapp.version>

  </properties>
  
  <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- 如果要执行测试用例，改为false -->
					<skip>true</skip>
					<argLine>-Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*TestCase.java</include>
						<include>**/Test*.java</include>
					</includes>
					<excludes>
						<exclude>**/Abstract*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin
				</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<webappDirectory>${basedir}/src/main/webapp</webappDirectory>
					<warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
  <dependencyManagement>
  	<dependencies>
  
  	</dependencies>
  </dependencyManagement>
</project>